--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body{
+  min-height: 100vh;
+  background: linear-gradient(rgb(0 0 0 / 7%), rgb(216 216 216 / 8%)), url(https://backiee.com/static/wallpapers/1000x563/365661.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
