--- a/src/app/components/HomePage/home-page/home-page.component.html
+++ b/src/app/components/HomePage/home-page/home-page.component.html
@@ -1,5 +1,8 @@
 <div class="row">
-  <div class="col-4">
-    <app-side-bar></app-side-bar>
+  <div class="col-2">
+    <app-side-bar class=""></app-side-bar>
+  </div>
+  <div class="col-10">
+    <app-team-list></app-team-list>
   </div>
 </div>
