--- a/src/app/components/Sidebar/side-bar/add-team-modal/add-team-modal.component.html
+++ b/src/app/components/Sidebar/side-bar/add-team-modal/add-team-modal.component.html
@@ -2,7 +2,7 @@
   <div class="modal-content">
     <div class="modal-header">
       <h5>Team Ekle</h5>
-      <button class="close-btn" (click)="closeModal()">×</button>
+      <button class="close-btn" (click)="closeModal()">x</button>
     </div>
     <input class="team-input" placeholder="Team Name" [(ngModel)]="teamName">
     <button type="submit" class="addTeamBtn" (click)="addTeam(teamName)">Ekle</button>
