--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<div class="row">
+  <div class="col-2" *ngIf="isLogin">
+    <app-side-bar></app-side-bar>
+  </div>
+  <div class="col-10">
+    <router-outlet></router-outlet>
+  </div>
+</div>
