--- a/src/app/components/Team/team-detail/team-detail.component.html
+++ b/src/app/components/Team/team-detail/team-detail.component.html
@@ -1,5 +1,44 @@
 <div class="row">
-  <h3>
+  <h3 class="teamName">
     {{teamNameData}}
   </h3>
+
+  <div class="row">
+      <div class="wrapper">
+      <div class="col-4">
+        <div class="userTable">
+          <div class=" userNameWrapper">
+            <div class="caption">
+              user1
+            </div>
+            <div class="addMoreTask">
+              +
+            </div>
+          </div>
+          <div class="row d-flex flex-column tasks">
+            <div class="col-3 task">
+
+            </div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
+
 </div>
