--- a/src/app/components/Team/team-detail/team-detail.component.html
+++ b/src/app/components/Team/team-detail/team-detail.component.html
@@ -35,7 +35,126 @@
           </div>
         </div>
       </div>
+      <div class="col-4">
+        <div class="userTable">
+          <div class=" userNameWrapper">
+            <div class="caption">
+              user1
+            </div>
+            <div class="addMoreTask">
+              +
+            </div>
+          </div>
+          <div class="row d-flex flex-column tasks">
+            <div class="col-3 task">
 
+            </div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="userTable">
+          <div class=" userNameWrapper">
+            <div class="caption">
+              user1
+            </div>
+            <div class="addMoreTask">
+              +
+            </div>
+          </div>
+          <div class="row d-flex flex-column tasks">
+            <div class="col-3 task">
+
+            </div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="userTable">
+          <div class=" userNameWrapper">
+            <div class="caption">
+              user1
+            </div>
+            <div class="addMoreTask">
+              +
+            </div>
+          </div>
+          <div class="row d-flex flex-column tasks">
+            <div class="col-3 task">
+
+            </div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-4">
+        <div class="userTable">
+          <div class=" userNameWrapper">
+            <div class="caption">
+              user1
+            </div>
+            <div class="addMoreTask">
+              +
+            </div>
+          </div>
+          <div class="row d-flex flex-column tasks">
+            <div class="col-3 task">
+
+            </div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+            <div class="col-3 task"></div>
+
+          </div>
+        </div>
+      </div>
 
     </div>
   </div>
