--- a/src/app/components/Sidebar/side-bar/side-bar.component.html
+++ b/src/app/components/Sidebar/side-bar/side-bar.component.html
@@ -11,7 +11,7 @@
 
   <div class="wrapperSection">
 
-    <div class="wrapperTask" routerLink='/team'>
+    <div class="wrapperTask" routerLink='/all-tasks'>
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
         class="icon">
         <path stroke-linecap="round" stroke-linejoin="round"
