--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,10 +1,8 @@
-<!-- <div class="row">
+<div class="row">
   <div class="col-2" *ngIf="isLogin">
     <app-side-bar></app-side-bar>
   </div>
   <div class="col-10">
     <router-outlet></router-outlet>
   </div>
-</div> -->
-
-<app-homepage></app-homepage>
+</div>
