--- a/src/app/components/Team/team-detail/team-detail.component.css
+++ b/src/app/components/Team/team-detail/team-detail.component.css
@@ -2,6 +2,9 @@
   color:#fff;
   padding: 30px;
 }
+.wrap{    padding: 3px;
+  margin-right: 61px;
+}
 .wrapper
 {
   margin:15px;
@@ -20,27 +23,44 @@
   display: flex;
   align-items: center;
   font-size: 19px;
-  padding-top: 13px;
-  padding-left: 12px;
-  background: rgb(79 78 82);
   width: inherit;
-  border-radius: 11px;
   padding: 9px;
-  color: #fff;
+  text-transform: capitalize;
 }
 .addMoreTask{
   margin-left: 16pc;
 }
 .tasks{
   padding: 22px;
-  margin-top:30px;
+
 }
 .task{
 
     width: 319px;
     height: 135px;
-    background-color: #f5f5f5b8;
+    background-color:#F5F5F5;
     color: #333;
     border-radius: 9px;
     margin-top: 6px;
+}
+.colorDots{
+  width: 332px;
+  height: 6px;
+  z-index: 9999;
+  position: absolute;
+  margin-left: -7px;
+  border-radius: 4px;
+  margin-top: 53px;
+}
+.title{
+  font-size: larger;
+  font-weight: 500;
+  text-transform: capitalize;
+  margin-top: 8px;
+
+}
+.description{
+  color: #656565db;
+  font-size: 14px;
+  margin-top: -13px;
 }
