--- a/src/app/components/Sidebar/side-bar/side-bar.component.css
+++ b/src/app/components/Sidebar/side-bar/side-bar.component.css
@@ -114,6 +114,7 @@ p,.teamIcon,.plusIcon,.icon,.captionSection{
 .teamName{
   padding-left: 6px;
   font-weight: 500;
+  cursor: pointer;
   letter-spacing: 1.3px;
 }
 .wrapperTeamName{
