--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,15 @@
-<!-- <div class="row">
-  <div class="col-2" *ngIf="isLogin">
-    <app-side-bar></app-side-bar>
+<div class="row">
+  <div class="row" *ngIf="isToken">
+    <div class="col-2">
+      <app-side-bar></app-side-bar>
+    </div>
+    <div class="col-10">
+      <router-outlet></router-outlet>
+    </div>
   </div>
-  <div class="col-10">
-    <router-outlet></router-outlet>
-  </div>
-</div> -->
 
-<app-homepage></app-homepage>
+  <div *ngIf="!isToken ">
+    <app-login></app-login>
+  </div>
+
+</div>
