--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-2" *ngIf="isLogin">
-    <app-side-bar></app-side-bar>
+  <div class="col-2">
+    <app-side-bar *ngIf="isLogin && this.isToken"></app-side-bar>
   </div>
   <div class="col-10">
     <router-outlet></router-outlet>
