--- a/src/app/components/Sidebar/side-bar/side-bar.component.html
+++ b/src/app/components/Sidebar/side-bar/side-bar.component.html
@@ -21,7 +21,7 @@
     </div>
 
 
-    <div class="wrapperMember" routerLink='/'>
+    <div class="wrapperMember" routerLink='/user-role-management'>
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
         class="icon">
         <path stroke-linecap="round" stroke-linejoin="round"
