--- a/src/app/components/Task/all-tasks/all-tasks.component.html
+++ b/src/app/components/Task/all-tasks/all-tasks.component.html
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row my-5 p-4">
   <div class="wrapper">
     <div *ngFor="let userId of (groupedTasks | keyvalue)  let i = index" class="col-3 wrap">
       <div class="userTable" [style.background-color]="colorCodes[i]">
